--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -3,7 +3,7 @@
 <section class="block mr-auto has-text-centered mt50">
     <div class="card is-small">
   <header class="card-header notification is-primary">
-    <p class="card-header-title flex has-text-black title is-4">
+    <p class="card-header-title has-text-centered has-text-black title is-4">
       <%= @todo_list.title %>
       <span class="icon ">
         <i class="fa fa-edit ml20"></i>
@@ -31,6 +31,7 @@
 </div>
 
 <div>
+    <h2 class="title is-3 has-text-left ml20 mt20 mb20">Todos Added - <%= @todo_list.todo_items.count %></h2>
 <%= render @todo_list.todo_items %>
 <h2 class="title has-text-left is-3 mt50 mb20">Add a New Todo</h2>
   <%= render "todo_items/form" %>
