--- a/app/views/todo_items/_todo_item.html.erb
+++ b/app/views/todo_items/_todo_item.html.erb
@@ -11,7 +11,7 @@
     </div>
   </strike>
          <div class="flex mt20 has-text-left">
-    
+
       <%# <span class=""><i class="fa fa-bin"></i></span> %>
 
     </div>
@@ -22,9 +22,7 @@
     <div class="flex mt20 has-text-left">
       <%= link_to "Delete", todo_list_todo_item_path(@todo_list, todo_item.id) , method: :delete, data: {confirm: "Are You Completed ?"}, class: "button is-danger is-small" %>
       <%# <span class=""><i class="fa fa-bin"></i></span> %>
-      <%= link_to "Mark as complete", complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch, data: {
-        confirm: "Have You Been Completed?"
-      }, class: "button is-warning is-small p5" %>
+      <%= link_to "Mark as complete", complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch, class: "button is-warning is-small p5" %>
   <% end %>
   </section>
 </div>
