--- a/app/views/todo_items/_form.html.erb
+++ b/app/views/todo_items/_form.html.erb
@@ -2,6 +2,6 @@
     <%= simple_form_for ([@todo_list, @todo_list.todo_items.build]) do |f| %>
   <%= f.text_field :content, placeholder: "New Todo Item", class: "input is-warning w-5" %>
   <br>
-  <%= f.submit "Submit", class: "button is-primary mt20" %>
+  <%= f.submit "Submit", class: "button is-primary text-has-centered mt20" %>
 <% end %>
 </div>
