--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -2,7 +2,7 @@
 
 <section class="block mr-auto has-text-centered mt50">
     <div class="card is-small">
-  <header class="card-header notification is-link">
+  <header class="card-header notification is-warning">
     <p class="card-header-title has-text-centered has-text-black title is-4">
       <%= @todo_list.title %>
       <span class="icon ">
