--- a/app/views/todo_lists/_form.html.erb
+++ b/app/views/todo_lists/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <section class="container w-full mr-auto">
+  <section class="container is-medium mr-auto">
 
     <div class="field">
     <div class="control">
