--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -5,8 +5,8 @@
     <h1 class="title mt60 p10 has-text-centered mt-5 has-text-black">Todo Lists</h1>
 
     <%= form_tag(todo_lists_path, method: :get) do %>
-      <%= text_field_tag(:search, params[:search]), placeholder: "Search Todos" %>
-      <%= submit_tag "Search" %>
+      <%= text_field_tag :search %>
+      <%= submit_tag "Search", :name => nil %>
     <% end %>
 
     </div>
