--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -7,7 +7,7 @@
       <div class="form">
         <div class="controls">
                 <%= form_tag(todo_lists_path, method: :get) do %>
-                  <%= text_field_tag :search, class: "input is-link" %>
+                  <%= text_field_tag :search %>
                   <%= submit_tag "Search", :name => nil, class: "button is-small is-link" %>
     <% end %>
 
